<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hik_ros2_camera_driver</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="fakeaddress@example.com">papr</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
